Refactor service layer, controllers, CI/CD pipeline (#20)
* Refactor service layer, controllers, CI/CD pipeline

   - Services return DTOs directly; controllers no longer call DtoMapper
   - ServiceCatalogController PATCH/DELETE use DTO for owner check (no double-fetch)
   - ResponseBuilder simplified to single build(HttpStatus, String) method
   - GlobalExceptionHandler extracted as @RestControllerAdvice
   - FeedbackService removes redundant provider existence check
   - DtoMapper removes dead null guards on required FK fields
   - CI split into pr-checks (build+test) and main-checks (build+test+CVE+docker)
   - CodeQL restricted to push/schedule only, autobuild for java-kotlin, setup-java added
   - Unit tests updated for service DTO return types; 111 tests passing

* Update Github action's version

---------

Co-authored-by: Hritam Kar <hritam.kar@sap.com>